<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.ReceitaActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/receitaPrimary"
                android:gravity="center|end"
                android:orientation="horizontal"
                android:padding="16dp">

                <EditText
                    android:id="@+id/edit_valor_receita"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="R$ 00,00"
                    android:inputType="numberDecimal"
                    android:textAlignment="textEnd"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="normal"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_data_receita"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="26dp"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/data"
                    android:inputType="date"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_categoria_receita"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/categoria"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_descricao_receita"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/descricao"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_salvar_receita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="16dp"
            android:background="@android:color/transparent"
            android:backgroundTint="@color/receitaPrimary"
            android:src="@drawable/ic_baseline_check_24"
            tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>